--- a/Natours/scss/base/_base.scss
+++ b/Natours/scss/base/_base.scss
@@ -7,7 +7,6 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
-  font-family: 'Lato', 'sans-serif';
 }
 
 body {
