--- a/Natours/scss/main.scss
+++ b/Natours/scss/main.scss
@@ -13,101 +13,3 @@
 
 @import 'pages/home';
 
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba($color-primary-dark, 0.8), rgba($color-primary-light, 0.8)),
-    url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
-  &__logo-box {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-  }
-  &__logo {
-    height: 35px;
-  }
-  &__text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-}
-
-.heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  margin-bottom: 60px;
-  &__main {
-    display: block;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 35px;
-    animation: moveInLeft 0.75s ease-out;
-  }
-  &__sub {
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 22px;
-    animation: moveInRight 0.75s ease-out;
-  }
-}
-
-
-.btn {
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all 0.2s;
-    position: relative;
-  }
-  &:hover {
-    box-shadow: 0 10px 20px rgba($color-black, 0.4);
-    transform: translateY(-3px);
-  }
-  &:active {
-    transform: translate(-1px);
-    box-shadow: 0 5px 10px rgba($color-black, 0.4);
-  }
-  &__white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-  }
-
-  &::after {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-
-  &:hover::after {
-    transform: scaleX(1.2) scaleY(1.4);
-    content: '';
-    opacity: 0;
-  }
-  &__white::after {
-    background-color: $color-white;
-  }
-  &__animated {
-    animation: moveInBottom 0.5s ease-in 0.5s;
-    animation-fill-mode: backwards;
-  }
-}
